rest/rest_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-lb      
spec:
  selector:
    app: rest-api    
  ports:
  - port: 9090
    targetPort: 80               
    nodePort: 31100
  type: LoadBalancer
