rest/rest_ingress.yaml
# add the line 10.50.100.5 app.best-forum.com
# to /etc/hosts to work locally without proper DNS setup

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress        
spec:
  rules:
    - host: app.best-forum.com             
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-lb                  
                port:
                  number: 9090
